--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,29 @@ img {
 .main--content {
     width: 100%;
 }
+
+.top--title {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    padding: 5px 16px;
+    border: 1px solid #565656;
+    width: fit-content;
+    border-radius: 2rem;
+}
+.title {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+.title span{
+    color: #27e187;
+}
+
+.skills {
+    color: #27e187;
+}
+
 .btn {
     padding: 8px 18px;
     background-color: #27e187;
@@ -167,3 +190,28 @@ img {
     margin-top: 1rem;
 }
 
+/* intro*/
+.intro h1{
+    margin-top: 2rem;
+}
+.intro p{
+    margin-top: 2rem;
+}
+.intro h1 span {
+    color: #27e187;
+}
+
+/*resume*/
+.experience {
+    padding-left: 2rem;
+    border-left: 1px solid #303030;
+    padding-bottom: 3rem;
+}
+
+.experience:last-child {
+    padding-bottom: 0;
+}
+
+.date {
+    margin-bottom: 0.5rem;
+}
