--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ img {
     padding-left: 2rem;
     border-left: 1px solid #303030;
     padding-bottom: 3rem;
+    position: relative;
 }
 
 .experience:last-child {
@@ -214,4 +215,50 @@ img {
 
 .date {
     margin-bottom: 0.5rem;
+}
+
+.company {
+    font-size: 0.75rem;
+    margin-top: 0.4rem;
+}
+
+.circle {
+    position: absolute;
+    height: 16px;
+    width: 16px;
+    border-radius: 100%;
+    background-color: #565656;
+    top: .1px;
+    left: -8px;
+}
+
+/*services*/ 
+.services {
+    display: grid;
+    gap: 2rem;
+}
+.service {
+    padding: 2rem;
+    border: 1px solid #565656;
+    border-radius: 1rem;
+}
+
+.projects {
+    color: #fff;
+    display: inline-block;
+    margin-top: 1.5rem;
+    text-transform: uppercase;
+}
+
+/* skills */
+.skills {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2rem;
+}
+
+.skill--img--cover {
+    position: relative;
+    height: 5rem;
+    width: 5rem;
 }
