--- a/styles.css
+++ b/styles.css
@@ -257,8 +257,60 @@ img {
     gap: 2rem;
 }
 
+.skill {
+    border: 2px solid #565656;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    padding-block: 3rem;
+    border-radius: 5rem;
+}
+
 .skill--img--cover {
     position: relative;
     height: 5rem;
     width: 5rem;
 }
+
+.skill h3 {
+    color: #27e187;
+}
+
+/*portfolio*/
+.portfolio--cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.full--cover {
+    position: relative;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 1rem;
+    transition: box-shadow 0.15s;
+}
+
+.full--cover:hover {
+    box-shadow: 0 0 1rem #27e187;
+    opacity: 0.8;
+}
+
+.chips {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    bottom: 0.5rem;
+    left: 0.5rem;
+}
+
+.chip {
+    padding: 5px 16px;
+    background-color: #303030;
+    border-radius: 2rem;
+    font-size: 0.8rem;
+    color: #fff;   
+}
+
