--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ h3 {
     color: #fff;
 }
 
+h5{
+    color: #999;
+}
+
 p {
     color: #999;
 }
@@ -44,7 +48,6 @@ img {
 }
 .container {
     padding: 5rem;
-
 }
 
 .main{
@@ -314,6 +317,71 @@ img {
     color: #fff;   
 }
 
+/* contact */
+.contact--cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.contact--card {
+    border: 2px solid #565656;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.contact--card i {
+    font-size: 2rem;
+    color:#27e187;
+    margin-bottom: 1rem;
+    display: inline-block;
+}
+
+.contact--form  {
+    border: 2px solid #565656;
+    padding: 1rem;
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: 2rem;
+}
+
+.input--wrapper {
+    display: grid;
+    gap: 0.5rem;
+}
+
+.input--field {
+    border-color:#27e187;
+    background-color: #fff;
+    padding: 5px 16px;
+    border-radius: 1rem;
+    outline: none;
+    color: #565656;
+    transition: border-color 0.4s, background-color 0.4s;
+}
+.input--field:placeholder {
+    color: #565656;
+}
+.input--field:focus {
+    border-color: #27e187;
+}
+
+.textarea {
+    background-color: #fff;
+    padding: 5px 16px;
+    outline: none;
+    color: #565656;
+    height: 250px;
+    padding: 1rem;
+}
+.textarea:placeholder {
+    color: #565656;
+}
+.textarea:focus {
+    box-shadow: inset 0 0 0 2px #27e187;
+}
+
 /* responsive */
 @media (max-width: 1100px) {
     .main {
@@ -349,7 +417,10 @@ img {
         grid-template-columns: repeat(1, 1fr);
     }
     .contact--cards {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .contact--form {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
@@ -367,6 +438,6 @@ img {
         padding: 1rem;
         padding-block: 2.5rem;
     }
-
 }
+
 
