Logos of Skills, cannot find a decent svg JS logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ img {
     object-fit: cover;
 }
 .container {
-    padding: 5rem;
+    padding: 3rem;
 }
 
 .main{
@@ -277,7 +277,7 @@ img {
 }
 
 .skill h3 {
-    color: #27e187;
+    color: #92f8c6;
 }
 
 /*portfolio*/
