--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,10 @@ img {
     height:100%;
     object-fit: cover;
 }
+
 .container {
     padding: 3rem;
+    border-right: 1px solid #565656;
 }
 
 .main{
@@ -61,6 +63,32 @@ img {
     width: 100%;
 }
 
+.nav_container {
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #565656;
+    border-right: 1px solid #565656;
+}
+
+.navbar {
+    background-color: #1f1f1f; /* Dark background for the navbar */
+    position: sticky; /* Makes the navbar fixed to the viewport */
+    top: 0; /* Ensures it sticks to the top */
+    width: 100%; /* Makes it span the entire width */
+    z-index: 1000; /* Keeps it above other content */
+    border-bottom: #27e187;
+}
+
+.navbar .nav-links {
+    list-style: none; /* Removes default bullet points */
+    display: flex; /* Aligns items horizontally */
+    gap: 50px; /* Adds spacing between items */
+    margin: 0;
+    padding: 0;
+    display: center;
+}
+
 .top--title {
     color: #fff;
     text-transform: uppercase;
@@ -70,6 +98,7 @@ img {
     width: fit-content;
     border-radius: 2rem;
 }
+
 .title {
     margin-top: 2rem;
     margin-bottom: 3rem;
@@ -83,6 +112,7 @@ img {
     color: #27e187;
 }
 
+/* button */
 .btn {
     padding: 8px 18px;
     background-color: #27e187;
@@ -94,12 +124,14 @@ img {
     cursor: pointer;
     transition: box-shadow 0.15s;
 }
+
 .btn:hover {
     background-color: #1f1f1f;
     color: #27e187;
     box-shadow: 0 0 1rem #27e187;
     opacity: 0.8;
 }
+
 .btn--line {
     padding: 8px 18px;
     background-color: #1f1f1f;
@@ -111,12 +143,18 @@ img {
     cursor: pointer;
     transition: box-shadow 0.15s;
 }
+
 .btn--line:hover {
     background-color: #27e187;
     border-color: #27e187;
     color: #1f1f1f;
     box-shadow: 0 0 1rem #27e187;
     opacity: 0.8;
+}
+
+/* responsive buttons */
+.responsive-button .btn {
+    display: none;
 }
 
 /* sidemenu */
@@ -190,6 +228,7 @@ img {
 .sidemenu  .btn {
     margin-top: 2rem;
 }
+
 .sidemenu  .btn--line {
     margin-top: 1rem;
 }
@@ -198,9 +237,11 @@ img {
 .intro h1{
     margin-top: 2rem;
 }
+
 .intro p{
     margin-top: 2rem;
 }
+
 .intro h1 span {
     color: #27e187;
 }
@@ -234,51 +275,6 @@ img {
     background-color: #565656;
     top: 4px;
     left: -8px;
-}
-
-/*services*/ 
-.services {
-    display: grid;
-    gap: 2rem;
-}
-.service {
-    padding: 2rem;
-    border: 1px solid #565656;
-    border-radius: 1rem;
-}
-
-.projects {
-    color: #fff;
-    display: inline-block;
-    margin-top: 1.5rem;
-    text-transform: uppercase;
-}
-
-/* skills */
-.skills {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 2rem;
-}
-
-.skill {
-    border: 2px solid #565656;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.5rem;
-    padding-block: 3rem;
-    border-radius: 5rem;
-}
-
-.skill--img--cover {
-    position: relative;
-    height: 5rem;
-    width: 5rem;
-}
-
-.skill h3 {
-    color: #92f8c6;
 }
 
 /*portfolio*/
@@ -361,9 +357,11 @@ img {
     color: #565656;
     transition: border-color 0.4s, background-color 0.4s;
 }
+
 .input--field:placeholder {
     color: #565656;
 }
+
 .input--field:focus {
     border-color: #27e187;
 }
@@ -376,12 +374,38 @@ img {
     height: 250px;
     padding: 1rem;
 }
+
 .textarea:placeholder {
     color: #565656;
 }
+
 .textarea:focus {
     box-shadow: inset 0 0 0 2px #27e187;
 }
+
+.footer {
+    background-color: #1f1f1f;
+    font-size: 0.9rem;
+}
+
+.footer .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn--footer {
+    all: unset; /* Resets styles */
+    color: #27e187;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.btn--footer:hover {
+    text-decoration: underline;
+    text-shadow: 0 0 1rem #27e187;
+    box-shadow: none;
+    opacity: 0.8;
+} 
 
 /* responsive */
 @media (max-width: 1100px) {
@@ -396,6 +420,20 @@ img {
        border-left: none;
        padding: 1rem;
     }
+    .navbar {
+        display: none;
+    }
+    .sidemenu .responsive-button .btn{
+        display: flex; /* Arrange buttons in a row */
+        flex-direction: column; /* Stack buttons vertically */
+        margin-top: 1rem;
+    }
+    .sidemenu  .btn {
+        margin-top: 1rem;
+    }
+    .social--icons {
+        margin-bottom: 1rem;
+    }
 }
 
 @media (max-width: 720px) {
@@ -407,6 +445,9 @@ img {
     }
     h3 {
         font-size: 1.3rem;
+    }
+    .navbar {
+        display: none;
     }
     .container {
         padding: 2rem;
